load("@dagger//:workspace_defs.bzl", "dagger_rules")

dagger_rules()

java_library(
    name = "lib",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":dagger",
        "@maven//:com_amazonaws_aws_lambda_java_events",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
    ],
)
