load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "lib",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//third_party/dagger",
        "@maven//:com_amazonaws_aws_lambda_java_events",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
    ],
)

java_library(
    name = "test-lib",
    testonly = True,
    srcs = glob(["src/test/java/**/*.java"]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//lib/testcontainers:test-lib",
        "@maven//:com_google_guava_guava",
        "@maven//:org_testcontainers_testcontainers",
    ],
)
