load("@contrib_rules_jvm//java:defs.bzl", "JUNIT5_DEPS", "java_test_suite")
load("@rules_java//java:defs.bzl", "java_binary", "java_library")
load("//lib/http:defs.bzl", "stub_server_image")

java_library(
    name = "lib",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//lib/secrets:lib",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
    ],
)

java_binary(
    name = "openai-stub-server",
    testonly = True,
    srcs = ["src/test/java/com/jordansimsmith/llm/OpenAiStubServer.java"],
    create_executable = False,
)

stub_server_image(
    name = "openai-stub",
    deploy_jar = ":openai-stub-server_deploy.jar",
    visibility = [
        "//visibility:public",
    ],
)

java_library(
    name = "test-lib",
    testonly = True,
    srcs = glob(
        ["src/test/java/**/*.java"],
        exclude = ["src/test/java/**/*Test.java"],
    ),
    data = [
        ":openai-stub-load",
    ],
    resources = glob(["src/test/resources/**/*.properties"]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":lib",
        "//lib/http:test-lib",
        "@maven//:com_google_guava_guava",
        "@maven//:org_testcontainers_testcontainers",
    ],
)

java_test_suite(
    name = "unit-tests",
    size = "small",
    srcs = glob(["src/test/java/**/*Test.java"]),
    runner = "junit5",
    test_suffixes = ["Test.java"],
    runtime_deps = JUNIT5_DEPS,
    deps = [
        ":lib",
        "//lib/secrets:test-lib",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_mockito_mockito_core",
    ],
)
