load("@dagger//:workspace_defs.bzl", "dagger_rules")

dagger_rules()

java_library(
    name = "lib",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":dagger",
        "@maven//:com_google_guava_guava",
        "@maven//:software_amazon_awssdk_secretsmanager",
    ],
)
