load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "lib",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//third_party/dagger",
        "@maven//:com_google_guava_guava",
        "@maven//:software_amazon_awssdk_secretsmanager",
    ],
)

java_library(
    name = "test-lib",
    testonly = True,
    srcs = glob(["src/test/java/**/*.java"]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":lib",
        "//third_party/dagger",
        "@maven//:com_google_guava_guava",
    ],
)
