load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")

oci_image(
    name = "dynamodb-image",
    base = "@dynamodb//:dynamodb"
)

oci_load(
    name = "dynamodb-load",
    image = ":dynamodb-image",
    repo_tags = [
        "bazel/dynamodb:dynamodb"
    ]
)

java_library(
    name = "lib",
    visibility = [
        "//visibility:public"
    ],
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob([
        "src/main/resources/**/*.properties",
        "src/main/resources/logback-test.xml",
    ]),
    data = [
        ":dynamodb-load"
    ],
    deps = [
        "@maven//:org_testcontainers_testcontainers",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:com_google_guava_guava",
    ],
)