load("@rules_java//java:defs.bzl", "java_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")

oci_image(
    name = "alpine-image",
    base = "@alpine//:alpine",
)

oci_load(
    name = "alpine-load",
    image = ":alpine-image",
    repo_tags = [
        "bazel/alpine:latest",
    ],
)

oci_image(
    name = "ryuk-image",
    base = "@ryuk//:ryuk",
)

oci_load(
    name = "ryuk-load",
    image = ":ryuk-image",
    repo_tags = [
        "bazel/ryuk:latest",
    ],
)

oci_image(
    name = "dynamodb-image",
    base = "@dynamodb//:dynamodb",
)

oci_load(
    name = "dynamodb-load",
    image = ":dynamodb-image",
    repo_tags = [
        "bazel/dynamodb:latest",
    ],
)

java_library(
    name = "test-lib",
    testonly = True,
    srcs = glob(["src/test/java/**/*.java"]),
    data = [
        ":alpine-load",
        ":dynamodb-load",
        ":ryuk-load",
    ],
    resources = glob([
        "src/test/resources/**/*.properties",
        "src/test/resources/logback-test.xml",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_google_guava_guava",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_testcontainers_testcontainers",
    ],
)
