load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:vitest/package_json.bzl", vitest_bin = "bin")

npm_link_all_packages(
    name = "node_modules",
)

js_library(
    name = "vitest-config",
    testonly = True,
    srcs = ["vitest.config.ts"],
    deps = [
        "//:node_modules/@vitejs/plugin-react",
        "//:node_modules/vitest",
    ],
)

js_library(
    name = "tsconfig",
    srcs = ["tsconfig.json"],
)

ts_project(
    name = "typecheck",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.tsx",
    ]),
    declaration = True,
    emit_declaration_only = True,
    transpiler = "tsc",
    tsconfig = "tsconfig.json",
    deps = [
        "//:node_modules/@mantine/core",
        "//:node_modules/@mantine/form",
        "//:node_modules/@testing-library/react",
        "//:node_modules/@testing-library/user-event",
        "//:node_modules/@types/react",
        "//:node_modules/react",
        "//:node_modules/vitest",
    ],
)

js_library(
    name = "src",
    srcs = glob(
        [
            "src/**/*.ts",
            "src/**/*.tsx",
        ],
        exclude = [
            "src/**/*.test.ts",
            "src/**/*.test.tsx",
            "src/test-setup.ts",
        ],
    ),
    deps = [
        "//:node_modules/@mantine/core",
        "//:node_modules/@mantine/form",
        "//:node_modules/@types/react",
        "//:node_modules/react",
    ],
)

npm_package(
    name = "pkg",
    srcs = [
        "package.json",
        ":src",
    ],
    include_runfiles = False,
    visibility = ["//visibility:public"],
)

js_library(
    name = "test-src",
    testonly = True,
    srcs = glob(
        [
            "src/**/*.test.ts",
            "src/**/*.test.tsx",
            "src/test-setup.ts",
        ],
        allow_empty = True,
    ),
    deps = [
        ":src",
        "//:node_modules/@mantine/core",
        "//:node_modules/@testing-library/react",
        "//:node_modules/@testing-library/user-event",
        "//:node_modules/vitest",
    ],
)

vitest_bin.vitest_test(
    name = "unit-tests",
    args = ["run"],
    chdir = package_name(),
    data = [
        "package.json",
        ":src",
        ":test-src",
        ":tsconfig",
        ":vitest-config",
        "//:node_modules/@testing-library/dom",
        "//:node_modules/@testing-library/user-event",
        "//:node_modules/jsdom",
    ],
)
