load("@rules_java//java:defs.bzl", "java_package_configuration")
load("@rules_java//toolchains:default_java_toolchain.bzl", "default_java_toolchain")

package(default_visibility = ["//visibility:public"])

package_group(
    name = "error_prone_packages",
    packages = [
        "//...",
    ],
)

java_package_configuration(
    name = "error_prone_config",
    javacopts = [
        "-Xep:AssertFalse:ERROR",
        "-Xep:CheckedExceptionNotThrown:ERROR",
        "-Xep:InterruptedExceptionSwallowed:ERROR",
        "-Xep:NonFinalStaticField:ERROR",
        "-Xep:RedundantNullCheck:ERROR",
        "-Xep:RemoveUnusedImports:ERROR",
        "-Xep:UnnecessarilyFullyQualified:ERROR",
        "-Xep:UnnecessarilyVisible:ERROR",
        "-Xep:UnnecessaryAnonymousClass:ERROR",
        "-Xep:UnusedMethod:ERROR",
        "-Xep:UnusedTypeParameter:ERROR",
        "-Xep:UnusedVariable:ERROR",
        "-XepDisableWarningsInGeneratedCode",
        "-XepExcludedPaths:.*/_javac/.*",
    ],
    packages = [":error_prone_packages"],
)

default_java_toolchain(
    name = "custom_java_toolchain_impl",
    java_runtime = "@rules_java//toolchains:remotejdk_25",
    package_configuration = [":error_prone_config"],
    source_version = "21",
    target_version = "21",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "custom_java_toolchain",
    toolchain = ":custom_java_toolchain_impl",
    toolchain_type = "@bazel_tools//tools/jdk:toolchain_type",
)
